--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
+javac.profile=
 javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
@@ -73,4 +74,3 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
-test.src.dir=test
